--- a/Online/.settings/org.eclipse.core.resources.prefs
+++ b/Online/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/views/ContactUs.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/Demo.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/Footer.jsp=UTF-8
